--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,60 @@
-version: "2"
+version: '3.7'
 services:
-  kafdrop:
-    image: obsidiandynamics/kafdrop
-    restart: "no"
-    ports:
-      - "9000:9000"
+  zookeeper:
+    image: wurstmeister/zookeeper:3.4.6
     environment:
-      KAFKA_BROKERCONNECT: "kafka:29092"
-      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
-    depends_on:
-      - "kafka"
+      JVMFLAGS: "-Djava.security.auth.login.config=/etc/zookeeper/zookeeper_jaas.conf"
+    volumes:
+      - ./configs/zookeeper_jaas.conf:/etc/zookeeper/zookeeper_jaas.conf
+    ports:
+      - 2181:2181
+
   kafka:
-    image: obsidiandynamics/kafka
-    restart: "no"
+    image: wurstmeister/kafka:2.13-2.8.1
+    depends_on:
+      - zookeeper
     ports:
-      - "2181:2181"
-      - "9092:9092"
+      - 9092:9092
     environment:
-      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
-      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
-      KAFKA_RESTART_ATTEMPTS: "10"
-      KAFKA_RESTART_DELAY: "5"
-      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
-      KAFKAJS_NO_PARTITIONER_WARNING: "1"
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: INTERNAL://:9093,EXTERNAL://:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9093,EXTERNAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:SASL_PLAINTEXT,EXTERNAL:SASL_PLAINTEXT
+      ALLOW_PLAINTEXT_LISTENER: 'yes'
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
+      KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL: PLAIN
+      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/kafka_jaas.conf"
+      security.protocol: sasl_plaintext
+    volumes:
+      - ./configs/kafka_server_jaas.conf:/etc/kafka/kafka_jaas.conf
+
+#version: "2"
+#services:
+#  kafdrop:
+#    image: obsidiandynamics/kafdrop
+#    restart: "no"
+#    ports:
+#      - "9000:9000"
+#    environment:
+#      KAFKA_BROKERCONNECT: "kafka:29092"
+#      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
+#    depends_on:
+#      - "kafka"
+#  kafka:
+#    image: obsidiandynamics/kafka
+#    restart: "no"
+#    ports:
+#      - "2181:2181"
+#      - "9092:9092"
+#    environment:
+#      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
+#      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
+#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
+#      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+#      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
+#      KAFKA_RESTART_ATTEMPTS: "10"
+#      KAFKA_RESTART_DELAY: "5"
+#      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
+#      KAFKAJS_NO_PARTITIONER_WARNING: "1"
