--- a/billing/package.json
+++ b/billing/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
