--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,32 +29,69 @@ services:
       security.protocol: sasl_plaintext
     volumes:
       - ./configs/kafka_server_jaas.conf:/etc/kafka/kafka_jaas.conf
+  es-node-01:
+    container_name: es-node-01
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    environment:
+      - discovery.type=single-node
+    image: 'docker.elastic.co/elasticsearch/elasticsearch:7.16.2'
+    networks:
+      - elastic
+  kibana-01:
+    container_name: kibana-01
+    ports:
+      - '5601:5601'
+    environment:
+      - 'ELASTICSEARCH_HOSTS=http://es-node-01:9200'
+    image: 'docker.elastic.co/kibana/kibana:7.16.2'
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "kibana-01:5601" ]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    depends_on:
+      - es-node-01
+    networks:
+      - elastic
 
-#version: "2"
-#services:
-#  kafdrop:
-#    image: obsidiandynamics/kafdrop
-#    restart: "no"
-#    ports:
-#      - "9000:9000"
-#    environment:
-#      KAFKA_BROKERCONNECT: "kafka:29092"
-#      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
-#    depends_on:
-#      - "kafka"
-#  kafka:
-#    image: obsidiandynamics/kafka
-#    restart: "no"
-#    ports:
-#      - "2181:2181"
-#      - "9092:9092"
-#    environment:
-#      KAFKA_LISTENERS: "INTERNAL://:29092,EXTERNAL://:9092"
-#      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:29092,EXTERNAL://localhost:9092"
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT"
-#      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-#      KAFKA_ZOOKEEPER_SESSION_TIMEOUT: "6000"
-#      KAFKA_RESTART_ATTEMPTS: "10"
-#      KAFKA_RESTART_DELAY: "5"
-#      ZOOKEEPER_AUTOPURGE_PURGE_INTERVAL: "0"
-#      KAFKAJS_NO_PARTITIONER_WARNING: "1"
+  filebeat:
+    user: root
+    container_name: filebeat
+    command: --strict.perms=false
+    volumes:
+      - ./configs/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
+      - ./api-geteaway/logs:/usr/share/filebeat/api/logs:ro
+      - ./auth/logs:/usr/share/filebeat/auth/logs:ro
+      - ./billing/logs:/usr/share/filebeat/billing/logs:ro
+    image: 'docker.elastic.co/beats/filebeat:7.16.2'
+    depends_on:
+      - kibana-01
+    #      kibana-01:
+    #        condition: service_healthy
+    networks:
+      - elastic
+
+  logstash:
+    container_name: logstash
+    image: docker.elastic.co/logstash/logstash:7.16.2
+    volumes:
+      - ./configs/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - '5044:5044'
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+    depends_on:
+      - es-node-01
+      - kibana-01
+    #      es-node-01:
+    #        condition: service_healthy
+    #      kibana-01:
+    #        condition: service_healthy
+    networks:
+      - elastic
+
+networks:
+  elastic:
+    name: elastic
