--- a/configs/logstash.conf
+++ b/configs/logstash.conf
@@ -11,5 +11,7 @@ output {
   elasticsearch {
     hosts => ["es-node-01:9200"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+    user => "elastic"
+    password => "emin"
   }
 }
