--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,51 @@
 version: '3.7'
 services:
+#  ----- nest apps -----
+  api-geteaway:
+    build:
+      context: ./api-geteaway
+      args:
+        NODE_ENV: development
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./api-geteaway:/app
+      - /app/node_modules
+      - api-logs:/app/logs
+    depends_on:
+      - kafka
+    networks:
+      - elastic
+  auth:
+    build:
+      context: ./auth
+      args:
+        NODE_ENV: development
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./auth:/app
+      - /app/node_modules
+      - auth-logs:/app/logs
+    depends_on:
+      - kafka
+    networks:
+      - elastic
+  billing:
+    build:
+      context: ./billing
+      args:
+        NODE_ENV: development
+    ports:
+      - "3200:3200"
+    volumes:
+      - ./billing:/app
+      - /app/node_modules
+      - billing-logs:/app/logs
+    depends_on:
+      - kafka
+    networks:
+      - elastic
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
     environment:
@@ -8,7 +54,9 @@ services:
       - ./configs/zookeeper_jaas.conf:/etc/zookeeper/zookeeper_jaas.conf
     ports:
       - 2181:2181
-
+    networks:
+      - elastic
+#   ----- Kafka -----
   kafka:
     image: wurstmeister/kafka:2.13-2.8.1
     depends_on:
@@ -18,7 +66,7 @@ services:
     environment:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENERS: INTERNAL://:9093,EXTERNAL://:9092
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9093,EXTERNAL://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka:9093,EXTERNAL://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:SASL_PLAINTEXT,EXTERNAL:SASL_PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: 'yes'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
@@ -29,12 +77,19 @@ services:
       security.protocol: sasl_plaintext
     volumes:
       - ./configs/kafka_server_jaas.conf:/etc/kafka/kafka_jaas.conf
+    networks:
+      - elastic
+#      ----- ELK + Filebeat -----
   es-node-01:
     container_name: es-node-01
     ports:
       - '9200:9200'
       - '9300:9300'
     environment:
+      - ELASTIC_USERNAME=elastic
+      - ELASTIC_PASSWORD=emin
+      - xpack.security.enabled=true
+      - xpack.security.authc.api_key.enabled=true
       - discovery.type=single-node
     image: 'docker.elastic.co/elasticsearch/elasticsearch:7.16.2'
     networks:
@@ -44,7 +99,10 @@ services:
     ports:
       - '5601:5601'
     environment:
-      - 'ELASTICSEARCH_HOSTS=http://es-node-01:9200'
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=emin
+      - action.destructive_requires_name=true
+      - ELASTICSEARCH_HOSTS=http://es-node-01:9200
     image: 'docker.elastic.co/kibana/kibana:7.16.2'
     healthcheck:
       test: [ "CMD", "curl", "-f", "kibana-01:5601" ]
@@ -62,9 +120,9 @@ services:
     command: --strict.perms=false
     volumes:
       - ./configs/filebeat.yml:/usr/share/filebeat/filebeat.yml:ro
-      - ./api-geteaway/logs:/usr/share/filebeat/api/logs:ro
-      - ./auth/logs:/usr/share/filebeat/auth/logs:ro
-      - ./billing/logs:/usr/share/filebeat/billing/logs:ro
+      - api-logs:/usr/share/filebeat/api/logs:ro
+      - auth-logs:/usr/share/filebeat/auth/logs:ro
+      - billing-logs:/usr/share/filebeat/billing/logs:ro
     image: 'docker.elastic.co/beats/filebeat:7.16.2'
     depends_on:
       - kibana-01
@@ -81,7 +139,9 @@ services:
     ports:
       - '5044:5044'
     environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=emin
+      - LS_JAVA_OPTS=-Xmx256m -Xms256m
     depends_on:
       - es-node-01
       - kibana-01
@@ -95,3 +155,7 @@ services:
 networks:
   elastic:
     name: elastic
+volumes:
+  api-logs:
+  auth-logs:
+  billing-logs:
