--- a/auth/Dockerfile.dev
+++ b/auth/Dockerfile.dev
@@ -9,13 +9,6 @@ RUN if [ "$NODE_ENV" = "development" ]; \
         fi
 
 COPY . ./
-
-RUN npm install -g @nestjs/cli
-
 ENV PORT 3000
 EXPOSE $PORT
-
-COPY start.sh /app
-RUN chmod +x /app/start.sh
-
-CMD ["/bin/bash", "/app/start.sh"]
+CMD ["npm", "run","start:dev"]
