--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
   api-geteaway:
     build:
       context: ./api-geteaway
+    image: eminm12345/api-geteaway
     depends_on:
       - kafka
     networks:
@@ -19,6 +20,7 @@ services:
   auth:
     build:
       context: ./auth
+    image: eminm12345/auth
     depends_on:
       - kafka
     networks:
@@ -26,6 +28,7 @@ services:
   billing:
     build:
       context: ./billing
+    image: eminm12345/billing
     depends_on:
       - kafka
     networks:
